# hshabit

./: .gitignore  LICENSE  Main.hs  Makefile  hshabit.cabal
Syntax/: Parser.y  Tokens.x
hs-bin-src/: Main.hs
hs-bin-src/System/: ParseArgs.hs
hs-src/: Main.hs
hs-src/Compiler/: Error.hs  Monad.hs  Options.hs  Warning.hs
hs-src/Compiler/FrontEnd/: Depends.hs  GatherEquations.hs  ModuleImport.hs  Sanitize.hs
hs-src/Misc/: Output.hs
hs-src/Syntax/: AST.hs  IL.hs  IndentBlocks.hs  IndentInfo.hs  Layout.hs  Lexeme.hs  ParseAST.hs  Parser.y  Posn.hs  Scanner.x  Tokens.x
scripts/: gold.sh  parse.sh  rebuildGold.sh
tests/: Test.hs
tests/indentinfo/: test000.gld  test000.hbt  test001.gld  test002.gld
tests/lexer/: test000.gld  test001.gld  test001.hbt  test002.gld  test002.hbt  test003.gld  test004.gld  test005.gld  test005.hbt  test006.gld  test006.hbt  test007.gld  test007.hbt
tests/parser/: test001.gld  test002.gld  test003.gld  test004.gld  test005.gld  test006.gld  test007.gld  test008.gld  test009.gld  test010.gld  test011.gld  test011.hbt  test012.gld  test013.gld  test014.gld  test014.hbt  test015.gld  test016.gld  test016.hbt  test017.gld  test018.gld  test018.hbt  test019.gld  test02.gld  test020.gld  test020.hbt  test021.gld  test022.gld  test023.gld  test024.gld  test025.gld  test025.hbt  test026.gld  test026.hbt  test027.gld  test027.hbt  test028.gld  test029.gld  test029.hbt  test030.gld  (+291 more)
tests/scanner/: test000.gld  test000.hbt  test001.gld  test001.hbt  test002.gld  test002.hbt  test003.gld  test003.hbt  test004.gld  test004.hbt  test005.gld  test005.hbt  test006.gld  test006.hbt  test007.gld  test007.hbt
