name:                hshabit
version:             0
synopsis:            High Speed Habit
description:         A high-performance compiler for the systems programming
                     language Habit.
homepage:            http://github.com/acw/hshabit
license:             BSD3
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@galois.com
copyright:           Copyright (c) 2014 Adam Wick
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-tools:         alex, happy
  hs-source-dirs:      hs-src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:
                       Syntax.IndentInfo,
                       Syntax.IndentBlocks,
                       Syntax.Lexeme,
                       Syntax.Parser,
                       Syntax.Posn,
                       Syntax.Scanner
  build-depends:
                       array >= 0.5 && < 10000,
                       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       filepath >=1.3 && <1.4

executable hshabit
  main-is:             Main.hs
  hs-source-dirs:      hs-bin-src
  other-modules:
                       System.ParseArgs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:
                       ansi-wl-pprint >= 0.6.7.1 && < 10000,
                       array >= 0.5 && < 10000,
                       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       Cabal >=1.18 && <1.19,
                       filepath >= 1.3.0.2 && < 10000,
                       hshabit >= 0 && < 10000,
                       optparse-applicative >= 0.8.0.1 && < 10000

test-suite hshabit-tests
  main-is:             Test.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:
                       base >= 4.7 && < 4.8,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       process >=1.2 && <1.3,
                       test-framework >= 0.8 && < 10000,
                       test-framework-program >= 1.1 && < 10000

